# open-cbgm

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  Makefile.in  README.md  autogen.sh  autotest  configure.ac
.github/workflows/: testing.yml
examples/: 3_john_collation.xml  3_john_collation_complete.xml  3_john_collation_fully_connected.xml  3_john_collation_no_uncl.xml  acts_1_collation.xml  john_6_23_collation.xml  test.xml
include/: apparatus.h  autotest.h  compare_witnesses_table.h  enumerate_relationships_table.h  find_relatives_table.h  global_stemma.h  local_stemma.h  open_cbgm.h  optimize_substemmata_table.h  pugixml.h  set_cover_solver.h  textual_flow.h  variation_unit.h  witness.h
lib/pugixml/: CMakeLists.txt  pugixml.cpp
lib/roaring/: CMakeLists.txt  roaring.c  roaring.h  roaring.hh
py/: fill_majority_witnesses.py  get_listwit.py
src/: CMakeLists.txt  apparatus.cpp  cbgm.cpp  compare_witnesses.cpp  compare_witnesses_table.cpp  enumerate_relationships_table.cpp  find_relatives.cpp  find_relatives_table.cpp  global_stemma.cpp  local_stemma.cpp  open_cbgm.cpp  optimize_substemmata.cpp  optimize_substemmata_table.cpp  populate_db.cpp  print_global_stemma.cpp  print_graphs.cpp  print_local_stemma.cpp  print_textual_flow.cpp  pugixml.cpp  set_cover_solver.cpp  textual_flow.cpp  variation_unit.cpp  witness.cpp
test/: 3_john_collation.xml  CMakeLists.txt  acts_1_collation.xml  apparatus_test  apparatus_test.cpp  autotest.cpp  config.h.in  get_listwit.py  local_stemma.dot  local_stemma_test  local_stemma_test.cpp  variation_unit_test  variation_unit_test.cpp  witness_test  witness_test.cpp
