# Add all executable scripts to be generated:
add_executable(autotest autotest.cpp)

# Link the build targets to external libraries:
target_link_libraries(autotest cxxopts open-cbgm)

# Register executables as tests:
add_test(NAME common_read_xml COMMAND autotest -t common_read_xml)
add_test(NAME local_stemma_constructor_1 COMMAND autotest -t local_stemma_constructor_1)
add_test(NAME local_stemma_constructor_2 COMMAND autotest -t local_stemma_constructor_2)
add_test(NAME local_stemma_path_exists COMMAND autotest -t local_stemma_path_exists)
add_test(NAME local_stemma_get_path COMMAND autotest -t local_stemma_get_path)
add_test(NAME local_stemma_common_ancestor_exists COMMAND autotest -t local_stemma_common_ancestor_exists)
add_test(NAME local_stemma_to_dot COMMAND autotest -t local_stemma_to_dot)
add_test(NAME variation_unit_constructor_1 COMMAND autotest -t variation_unit_constructor_1)
add_test(NAME variation_unit_constructor_2 COMMAND autotest -t variation_unit_constructor_2)
add_test(NAME variation_unit_constructor_3 COMMAND autotest -t variation_unit_constructor_3)
add_test(NAME variation_unit_constructor_4 COMMAND autotest -t variation_unit_constructor_4)
add_test(NAME apparatus_constructor COMMAND autotest -t apparatus_constructor)
add_test(NAME apparatus_get_extant_passages_for_witness COMMAND autotest -t apparatus_get_extant_passages_for_witness)
add_test(NAME set_cover_solver_constructor COMMAND autotest -t set_cover_solver_constructor)
add_test(NAME set_cover_solver_get_unique_rows COMMAND autotest -t set_cover_solver_get_unique_rows)
add_test(NAME set_cover_solver_get_trivial_solution COMMAND autotest -t set_cover_solver_get_trivial_solution)
add_test(NAME set_cover_solver_get_greedy_solution COMMAND autotest -t set_cover_solver_get_greedy_solution)
add_test(NAME witness_constructor_1 COMMAND autotest -t witness_constructor_1)
add_test(NAME witness_constructor_2 COMMAND autotest -t witness_constructor_2)
add_test(NAME witness_get_genealogical_comparison_for_witness_1 COMMAND autotest -t witness_get_genealogical_comparison_for_witness_1)
add_test(NAME witness_get_genealogical_comparison_for_witness_2 COMMAND autotest -t witness_get_genealogical_comparison_for_witness_2)
add_test(NAME witness_get_genealogical_comparison_for_witness_3 COMMAND autotest -t witness_get_genealogical_comparison_for_witness_3)
add_test(NAME witness_get_substemmata COMMAND autotest -t witness_get_substemmata)
add_test(NAME textual_flow_constructor_1 COMMAND autotest -t textual_flow_constructor_1)
add_test(NAME textual_flow_constructor_2 COMMAND autotest -t textual_flow_constructor_2)
add_test(NAME textual_flow_textual_flow_to_dot COMMAND autotest -t textual_flow_textual_flow_to_dot)
add_test(NAME textual_flow_coherence_in_attestations_to_dot COMMAND autotest -t textual_flow_coherence_in_attestations_to_dot)
add_test(NAME textual_flow_coherence_in_variant_passages_to_dot COMMAND autotest -t textual_flow_coherence_in_variant_passages_to_dot)
add_test(NAME global_stemma_constructor COMMAND autotest -t global_stemma_constructor)
add_test(NAME global_stemma_to_dot COMMAND autotest -t global_stemma_to_dot)
